calico/network-policy-namespace-a.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-a
  namespace: namespace-a
spec:
  # TODO:
  # Define ingress
  # Define egress
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
          - key: namespace
            operator: In
            values: ["namspace-b"]
  egress:
    - to:
      - namespaceSelector:
          matchExpressions:
          - key: namespace
            operator: In
            values: ["namspace-b","namespace-c"]
