calico/network-policy-namespace-c.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-c
  namespace: namespace-c
spec:
  # TODO:
  # Define ingress
  ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
          - key: namespace
            operator: In
            values: ["namspace-a"]
